--- a/MCMS/Base.lproj/Main.storyboard
+++ b/MCMS/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--Magical Creatures-->
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
@@ -17,15 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1w9-Gx-lbV">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1w9-Gx-lbV">
+                                <rect key="frame" x="0.0" y="64" width="600" height="472"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <textField key="tableFooterView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter creature name here" textAlignment="natural" minimumFontSize="17" id="B7h-v4-k3Y">
-                                    <rect key="frame" x="0.0" y="72" width="600" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellidentifier" id="g3o-jt-C8S">
                                         <rect key="frame" x="0.0" y="28" width="600" height="44"/>
@@ -34,6 +28,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="ANd-tU-8CG" kind="show" id="rkG-RF-mEr"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -43,14 +40,15 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="1w9-Gx-lbV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Jv8-kQ-QzK"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1w9-Gx-lbV" secondAttribute="bottom" id="Xes-If-hBs"/>
-                            <constraint firstItem="1w9-Gx-lbV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="u5H-GG-TxN"/>
-                            <constraint firstAttribute="trailing" secondItem="1w9-Gx-lbV" secondAttribute="trailing" id="wzu-CK-Yjl"/>
-                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Magical Creatures" id="DXt-C4-U20">
+                    <navigationItem key="navigationItem" id="DXt-C4-U20">
+                        <nil key="title"/>
+                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter name" textAlignment="natural" minimumFontSize="17" id="lcN-fV-xzz">
+                            <rect key="frame" x="20" y="7" width="452" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
                         <barButtonItem key="rightBarButtonItem" title="Add Creature" id="Z4G-xu-Ank">
                             <connections>
                                 <action selector="addCreature:" destination="BYZ-38-t0r" id="Xnr-oG-pbg"/>
@@ -59,12 +57,30 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="1w9-Gx-lbV" id="o2K-n0-VRz"/>
-                        <outlet property="textField" destination="B7h-v4-k3Y" id="WxT-cZ-3Bc"/>
+                        <outlet property="textField" destination="lcN-fV-xzz" id="fbR-GG-7UN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1117" y="387"/>
+            <point key="canvasLocation" x="773" y="387"/>
+        </scene>
+        <!--Creature View Controller-->
+        <scene sceneID="a3c-0c-DDn">
+            <objects>
+                <viewController id="ANd-tU-8CG" customClass="CreatureViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uuJ-5i-K69"/>
+                        <viewControllerLayoutGuide type="bottom" id="Sym-l4-zgD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="peJ-wE-MFQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AjY-9q-ckq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1435" y="387"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RM5-xl-3l6">
@@ -82,7 +98,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iBN-7Z-h1d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="1047"/>
+            <point key="canvasLocation" x="95" y="387"/>
         </scene>
     </scenes>
 </document>
