--- a/MCMS/Base.lproj/Main.storyboard
+++ b/MCMS/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,13 +21,34 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1w9-Gx-lbV">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5yw-nN-lbW">
+                                    <rect key="frame" x="0.0" y="72" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="Battle Now!"/>
+                                </button>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cellidentifier" id="g3o-jt-C8S">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cellidentifier" textLabel="J4U-DU-65F" detailTextLabel="hFE-vk-bde" style="IBUITableViewCellStyleSubtitle" id="g3o-jt-C8S">
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g3o-jt-C8S" id="Bz8-Dh-Daf">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="J4U-DU-65F">
+                                                    <rect key="frame" x="15" y="6" width="31.5" height="19.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hFE-vk-bde">
+                                                    <rect key="frame" x="15" y="25.5" width="40.5" height="13.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="ANd-tU-8CG" kind="show" id="rkG-RF-mEr"/>
@@ -65,7 +87,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="772.5" y="386"/>
+            <point key="canvasLocation" x="772.5" y="385"/>
         </scene>
         <!--Creature View Controller-->
         <scene sceneID="a3c-0c-DDn">
@@ -80,42 +102,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qYd-Br-BUq">
-                                <rect key="frame" x="40" y="74" width="240" height="240"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="67" y="72" width="240" height="240"/>
-                                </variation>
+                                <rect key="frame" x="67" y="72" width="240" height="240"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U6E-VT-fEg">
-                                <rect key="frame" x="114" y="398" width="92" height="62"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <state key="normal" title="Edit"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="141" y="396" width="92" height="62"/>
-                                </variation>
-                                <connections>
-                                    <action selector="onEditTapped:" destination="ANd-tU-8CG" eventType="touchUpInside" id="Md8-lI-ZuS"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nnr-iS-qsC">
-                                <rect key="frame" x="40" y="322" width="240" height="30"/>
+                                <rect key="frame" x="67" y="320" width="240" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="67" y="320" width="240" height="30"/>
-                                </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k3K-yR-t74">
-                                <rect key="frame" x="40" y="360" width="240" height="30"/>
+                                <rect key="frame" x="67" y="358" width="240" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="67" y="358" width="240" height="30"/>
-                                </variation>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="vaQ-JV-bS8"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="vaQ-JV-bS8">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" width="78.5" id="g2h-rQ-4Ym">
+                            <connections>
+                                <action selector="onEditTapped2:" destination="ANd-tU-8CG" id="e7i-d5-owe"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="detailTextField" destination="k3K-yR-t74" id="gbG-Kj-q9t"/>
                         <outlet property="editNameText" destination="nnr-iS-qsC" id="CYl-QT-yPn"/>
@@ -124,7 +134,58 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AjY-9q-ckq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1435" y="387"/>
+            <point key="canvasLocation" x="1503" y="736.99999999999989"/>
+        </scene>
+        <!--Battle View Controller-->
+        <scene sceneID="yJB-jF-8tz">
+            <objects>
+                <viewController id="oZD-7P-Ylv" customClass="BattleViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pyM-9Y-Au9"/>
+                        <viewControllerLayoutGuide type="bottom" id="B13-WH-eOp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2xK-90-vky">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="It was super effective!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VAV-sB-rIM">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="B13-WH-eOp" firstAttribute="top" secondItem="VAV-sB-rIM" secondAttribute="bottom" constant="482" id="Ohp-Tk-3x6"/>
+                            <constraint firstItem="VAV-sB-rIM" firstAttribute="top" secondItem="pyM-9Y-Au9" secondAttribute="bottom" constant="33" id="ly4-fK-ox9"/>
+                            <constraint firstItem="VAV-sB-rIM" firstAttribute="leading" secondItem="2xK-90-vky" secondAttribute="leadingMargin" constant="33" id="qo0-uJ-FuP"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="VAV-sB-rIM"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="ly4-fK-ox9"/>
+                                <exclude reference="qo0-uJ-FuP"/>
+                                <exclude reference="Ohp-Tk-3x6"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="VAV-sB-rIM"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="ly4-fK-ox9"/>
+                                <include reference="qo0-uJ-FuP"/>
+                                <include reference="Ohp-Tk-3x6"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YQf-Br-tUd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1503" y="78"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RM5-xl-3l6">
